[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/environtment.png" type="Texture" id=1]
[ext_resource path="res://TestEnv/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/World/Level1.gd" type="Script" id=3]
[ext_resource path="res://Scene/World/BulletPool.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/World/Spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://TestEnv/GummyDefender.tscn" type="PackedScene" id=7]

[sub_resource type="TileSet" id=1]
0/name = "environtment.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 1180, 2274, 122, 623 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "environtment.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 1363, 2475, 240, 228 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "environtment.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 1397, 2775, 67, 72 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "environtment.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 24, 2418, 200, 369 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "environtment.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 1958, 572, 376, 164 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "environtment.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 2317, 813, 601, 305 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "environtment.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 805, 449, 152, 191 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "environtment.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 1423, 1474, 241, 35 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [  ]
7/z_index = 0
8/name = "environtment.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 1160, 16, 107, 217 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [  ]
8/z_index = 0
9/name = "environtment.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 846, 4, 134, 152 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [  ]
9/z_index = 0
10/name = "environtment.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 25, 1710, 197, 376 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [  ]
10/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 100, 0, 100, 98, 0, 98 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 99, 0, 99, 96, 0, 96 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 97, 0, 97, 97, 0, 97 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 101, 0, 101, 95, 0, 95 )

[sub_resource type="TileSet" id=6]
0/name = "environtment.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 440, 1338, 100, 98 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "environtment.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 2744, 220, 356, 296 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "environtment.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 2342, 44, 358, 474 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "environtment.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 1151, 15, 120, 229 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "environtment.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 1426, 1468, 230, 46 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "environtment.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 28, 1718, 194, 364 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 4
6/name = "environtment.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 1184, 2278, 122, 618 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 5
7/name = "environtment.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 2321, 817, 591, 477 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [  ]
7/z_index = 0
8/name = "environtment.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 325, 1338, 97, 97 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "environtment.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 64, 1340, 101, 95 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "environtment.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 195, 1339, 99, 96 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "environtment.png 11"
11/texture = ExtResource( 1 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 593, 1572, 470, 601 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shapes = [  ]
11/z_index = 0
12/name = "environtment.png 12"
12/texture = ExtResource( 1 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 305, 1570, 240, 603 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shapes = [  ]
12/z_index = 0
13/name = "environtment.png 13"
13/texture = ExtResource( 1 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 1364, 2466, 234, 250 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shapes = [  ]
13/z_index = 1
14/name = "environtment.png 14"
14/texture = ExtResource( 1 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 1374, 2762, 118, 103 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shapes = [  ]
14/z_index = 0
15/name = "environtment.png 15"
15/texture = ExtResource( 1 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 2244, 2230, 114, 109 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shapes = [  ]
15/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 100, 0, 100, 96, 0, 96 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 100, 0, 100, 96, 0, 96 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 100, 0, 100, 96, 0, 96 )

[sub_resource type="TileSet" id=10]
0/name = "environtment.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 195, 1339, 100, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "environtment.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 323, 1339, 100, 96 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "environtment.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 1340, 100, 96 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 140.5 )

[node name="Level1" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 3 )

[node name="fg" type="ParallaxBackground" parent="."]
layer = 5
scroll_base_scale = Vector2( 1.2, 1.2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="fg"]

[node name="others" type="TileMap" parent="fg/ParallaxLayer"]
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 852040, 3, 0, 852043, 3, 0, 852044, 9, 0, 917533, 3, 0, 917534, 0, 0, 917536, 3, 0, 917537, 8, 0, 1114146, 2, 0 )

[node name="bg" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.3, 0.3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="bg"]
motion_mirroring = Vector2( 2255, 0 )

[node name="Sprite" type="Sprite" parent="bg/ParallaxLayer"]
position = Vector2( -26.9391, -8.97968 )
scale = Vector2( 1.88931, 1.88931 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 1447, 1556, 1210, 324 )
__meta__ = {
"_edit_lock_": true
}

[node name="tile" type="TileMap" parent="."]
position = Vector2( 0, -198 )
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589888, 12, 0, 589895, 12, 0, 589909, 12, 0, 589923, 12, 0, 589937, 12, 0, 917568, 3, 0, 983052, 2, 0, 983110, 13, 0, 983149, 13, 0, 983206, 7, 0, 1769467, 1, 0, 2621509, 15, 0, 2621514, 15, 0, 2621569, 15, 0, 2621573, 15, 0, 2818038, 4, 0, 2752517, 4, 0, 2752532, 4, 0, 2752547, 4, 0, 2752673, 4, 0, 2752699, 10, 0, 2752705, 10, 0, 2752711, 10, 0, 2949100, 0, 0, 2949106, 0, 0, 2949112, 0, 0, 2949118, 0, 0, 2883588, 0, 0, 2883594, 0, 0, 2883600, 0, 0, 2883606, 0, 0, 2883612, 0, 0, 2883618, 0, 0, 2883624, 0, 0, 2883625, 0, 0, 2883631, 0, 0, 2883637, 0, 0, 2883643, 0, 0, 2883649, 0, 0, 2883655, 0, 0, 2883661, 0, 0, 2883667, 0, 0, 2883673, 0, 0, 2883679, 0, 0, 2883685, 0, 0, 2883691, 0, 0, 2883697, 0, 0, 2883703, 0, 0, 2883709, 0, 0, 2883715, 0, 0, 2883721, 0, 0, 2883727, 0, 0, 2883733, 0, 0, 2883739, 0, 0, 2883745, 0, 0, 2883751, 0, 0, 2883757, 0, 0, 2883763, 0, 0, 2883769, 0, 0, 2883775, 0, 0, 2883777, 0, 0, 2883781, 0, 0, 2883787, 0, 0, 2883793, 0, 0, 2883799, 0, 0, 2883805, 0, 0, 2883811, 0, 0 )

[node name="obs" type="TileMap" parent="."]
position = Vector2( -77, 18 )
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 10 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 2293944, 0, 0, 2293950, 2, 0, 2293956, 2, 0, 2293962, 2, 0, 2293968, 2, 0, 2293974, 1, 0, 3145873, 0, 0, 3145879, 1, 0, 3145885, 2, 0, 3145891, 2, 0, 3145897, 1, 0, 3145903, 1, 0, 3145956, 0, 0, 3145962, 2, 0, 3145968, 2, 0, 3145974, 2, 0, 3145980, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 101.594, 69.8456 )
scale = Vector2( 0.8, 0.8 )
z_index = 1

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 3072
limit_bottom = 600
limit_smoothed = true
smoothing_enabled = true

[node name="ToRoom2" type="Area2D" parent="."]
position = Vector2( 1024, 500 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom2"]
position = Vector2( 0, -43 )
shape = SubResource( 11 )

[node name="ToRoom3" type="Area2D" parent="."]
position = Vector2( 2048, 500 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom3"]
position = Vector2( 0, -43 )
shape = SubResource( 11 )

[node name="BulletPool" parent="." instance=ExtResource( 4 )]

[node name="Spawner" parent="." instance=ExtResource( 5 )]
enemy_pool = ExtResource( 7 )

[node name="Spawner2" parent="." instance=ExtResource( 5 )]
position = Vector2( -115.528, 426.955 )
enemy_pool = ExtResource( 7 )
[connection signal="send_bullet" from="Player" to="BulletPool" method="_on_Player_send_bullet"]
[connection signal="body_entered" from="ToRoom2" to="." method="_on_ToRoom2_body_entered"]
[connection signal="body_entered" from="ToRoom3" to="." method="_on_ToRoom3_body_entered"]
